# example-chunks

./: Cargo.toml  README.md
src/: main.rs
src/bar/: bar.rs  mod.rs
src/chunks/: chunks.rs  mod.rs
src/plates/: mod.rs  plates.rs
src/slabs/: mod.rs  slabs.rs
