[package]
name = "clock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chunks-rs = "0.6.5"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
